--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
-    "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json,css,html}\""
+    "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json,css,html}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -19,6 +21,7 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.37.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -26,6 +29,12 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
     "mini-css-extract-plugin": "^2.9.4",
     "prettier": "^3.6.2",
@@ -36,6 +45,7 @@
     "styled-components": "^6.1.19",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
